feat: add properties in tenant response
